--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
     "formik": "^2.2.0",
+    "query-string": "^6.13.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.0",
