--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
+    "emoji-picker-react": "^3.2.4",
     "formik": "^2.2.0",
     "query-string": "^6.13.6",
     "react": "^16.14.0",
